--- a/life_blood_network/vercel.json
+++ b/life_blood_network/vercel.json
@@ -3,7 +3,8 @@
     "builds": [
         {
             "src": "life_blood_network/wsgi.py",
-            "use": "@vercel/node"
+            "use": "@vercel/python", 
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9"}
         }
     ],
     "routes": [
